javaScript updated, css updated

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <!-- Info about the conversation participant goes here -->
         </header>
         <section id="messages">
+
+            
+          </article>
           <!-- Message articles goes here -->
         </section>
         <footer>
